# nb2dbpy

./: LICENCE  README.md  pyproject.toml
src/nb2dbpy/: converters.py  jupyter_metadata.yaml  nb2dbpy.py  utils.py
tests/: test_dbpy.ipynb  test_dbpy.py  test_ipynb.ipynb
